# remote_render_ui

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  nifs.json
patches/: nanogui.patch
python/: gui_server.cpp  run_server.py  test_sana.py
src/: ControlsForm.cpp  ControlsForm.hpp  PacketDescriptions.hpp  RenderClientApp.cpp  RenderClientApp.hpp  VideoClient.cpp  VideoClient.hpp  VideoPreviewWindow.cpp  VideoPreviewWindow.hpp  options.hpp  remote_ui.cpp
src/custom_widgets/: StreamingTextBox.cpp  StreamingTextBox.hpp  rotator.cpp  rotator.hpp
test_server/: InterfaceServer.hpp  server.cpp
